--- a/banking-frontend/src/app/features/transactions/transaction-form/transaction-form.html
+++ b/banking-frontend/src/app/features/transactions/transaction-form/transaction-form.html
@@ -19,14 +19,14 @@
           class="form-control">
           <option [value]="0">-- Select Account --</option>
           <option *ngFor="let account of accounts" [ngValue]="account.id">
-            {{ account.accountNumber }} - {{ account.ownerName }} (Balance: ${{ account.balance.toFixed(2) }})
+            {{ account.accountNumber }} - {{ account.ownerName }} (Balance: {{ account.balance | currencyFormat }})
           </option>
         </select>
       </div>
 
       <div class="current-balance" *ngIf="selectedAccount">
         <span class="label">Current Balance:</span>
-        <span class="value">${{ selectedAccount.balance.toFixed(2) }}</span>
+        <span class="value">{{ selectedAccount.balance | currencyFormat }}</span>
       </div>
 
       <div class="form-group">
@@ -59,7 +59,7 @@
       <div class="expected-balance" *ngIf="selectedAccount && transaction.amount > 0">
         <span class="label">Expected Balance After Transaction:</span>
         <span class="value" [class.warning]="transaction.type === TransactionType.Withdrawal && transaction.amount > selectedAccount.balance">
-          ${{ getExpectedBalance().toFixed(2) }}
+          {{ getExpectedBalance() | currencyFormat }}
         </span>
       </div>
 
