--- a/banking-frontend/src/app/features/customers/customer-list/customer-list.html
+++ b/banking-frontend/src/app/features/customers/customer-list/customer-list.html
@@ -35,12 +35,7 @@
             <button 
               class="btn btn-sm btn-info" 
               [routerLink]="['/customers', customer.id]">
-              View
-            </button>
-            <button 
-              class="btn btn-sm btn-danger" 
-              (click)="deleteCustomer(customer.id)">
-              Delete
+              View Details
             </button>
           </td>
         </tr>
